Removes -XX:MaxPermSize because it is not valid in jdk 1.8